tests/miniJava/neg/000120_mutation.MiniJava
class java { public new static void Main ( String [ ] java ) { { } } }
